Allow multiple default directories in the file tree options